[package]
name = "ldcore"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pistoncore-event_loop = "0.49.0"
pistoncore-input = "0.28.0"
pistoncore-window = "0.44.0"
pistoncore-sdl2_window = "0.63.0"
piston2d-graphics = "0.36.0"
piston2d-opengl_graphics = "0.72.0"
